nginx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    name: nginx
  name: nginx
  namespace: nginx
spec:
  ports:
  - port: 8080
  selector:
    name: nginx
